welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: value !== is not a member of Int
		if (die1!==die2){
                        ^